responsive-fix:(adjusted the pricing cards fluid wrap, mobile header height, and added video link to landscape orientation)

--- a/css/styles.css
+++ b/css/styles.css
@@ -168,7 +168,7 @@ img {
     font-size: 2.4vw;
     line-height: 1.1;
     z-index: 1;
-    text-shadow: 1px 1px 1px #000;
+    text-shadow: 1px 1px 1px #090B4B;
 }
 
 #hero .button {
